# parallel-xai-gnn

./: .gitignore  Makefile  README.md  example.ipynb  pyproject.toml  requirements.txt  setup.cfg
src/: utils.py
src/explain/: cluster.py  compare.py  examples.py  executions.py  main.py  methods.py  parallel_xai.py  sparse.py  utils.py
src/explain/experiments/: drop_tables.py  dropout.py  dropout_tables.py  examples.py  full.py  full_tables.py
src/train/: models.py  train.py  train_toy.py
